# src/api/routes/tenant.routes.ts
@@ -2,9 +2,11 @@
 
 import { Router } from 'express';
 import { validateBody,validateQuery,validateParams } from '../../middlewares/validation.middleware';
-
+import {ipRateLimiter,identityRateLimiter} from '../../middlewares/rate.limit.middleware'
+import {AdminAuthMiddleware} from '../../middlewares/auth.middleware'
 
 import {
+    createAdmin,
     createTenant,
     fetchTenant,
     refreshAuthToken,
@@ -24,6 +26,9 @@ const router = Router();
 export const CREATE_TENANT_ENDPOINT =
     '/tenant';
 
+export const CREATE_ADMIN_ENDPOINT =
+    '/admin';
+
 export const FETCH_TENANT_ENDPOINT =
     '/tenant/:tenantId';
 
@@ -36,23 +41,36 @@ export const REFRESH_AUTH_TOKEN_ENDPOINT =
 router.post(
     CREATE_TENANT_ENDPOINT,
     validateBody(createTenantSchema),
+    AdminAuthMiddleware,
+    identityRateLimiter,
     createTenant,
 );
+
+router.post(
+    CREATE_ADMIN_ENDPOINT,
+    validateBody(createTenantSchema),
+    ipRateLimiter,
+    createAdmin,
+)
 router.post(
     LOGIN_TENANT_ENDPOINT,
     validateBody(tenantLoginSchema),
+    ipRateLimiter,
     loginTenant,
 );
 
 router.post(
     REFRESH_AUTH_TOKEN_ENDPOINT,
     validateBody(refreshAuthTokenSchema),
+    ipRateLimiter,
     refreshAuthToken,
 );
 
 router.get(
     FETCH_TENANT_ENDPOINT,
     validateParams(fetchTenantSchema),
+    AdminAuthMiddleware,
+    ipRateLimiter,
     fetchTenant as any,
 );
 
